--- a/o2/tree_creator/configuration.json
+++ b/o2/tree_creator/configuration.json
@@ -108,7 +108,7 @@
         "syst": "pp",
         "muonSelection": "0",
         "maxDiffZvtxFT0vsPV": "1",
-        "isMC": "true",
+        "isMC": "false",
         "TimeIntervalForOccupancyCalculationMin": "-40",
         "TimeIntervalForOccupancyCalculationMax": "100",
         "TimeBinsForOccupancyCalculation": {
@@ -733,18 +733,19 @@
     },
     "lambdakzero-initializer": "",
     "lf-tree-creator-cluster-studies": {
-        "fillV0": "true",
-        "fillK": "true",
-        "fillDe": "true",
-        "fillHe3": "true",
+        "fillV0": "false",
+        "fillK": "false",
+        "fillDe": "false",
+        "fillHe3": "false",
+        "fillPKPi": "true",
         "smallTable": "false",
         "cfgMaterialCorrection": "0",
         "zVtxMax": "10",
         "downscaleFactor": "0.100000001",
         "applyAdditionalEvSel": "false",
-        "v0track_NclsItsMin": "0",
-        "v0track_NclsTpcMin": "100",
-        "v0track_NclsTpcMaxShared": "5",
+        "track_NclsItsMin": "0",
+        "track_NclsTpcMin": "100",
+        "track_NclsTpcMaxShared": "5",
         "etaMaxV0dau": "0.800000012",
         "v0setting_dcaV0daughters": "1",
         "v0setting_dcaV0fromPV": "1",
@@ -756,12 +757,15 @@
         "v0setting_massWindowLambda": "0.0599999987",
         "v0setting_massWindowK0s": "0.00999999978",
         "v0setting_nsigmaTPCEl": "1",
+        "v0setting_nsigmaTPCPi": "1",
+        "v0setting_nsigmaTPCPr": "1",
         "lambdasetting_qtAPcut": "0.0199999996",
+        "lambdasetting_pmin": "0",
         "casc_setting_dcaV0daughters": "0.100000001",
-        "casc_setting_cosPA": "0.999899983",
+        "casc_setting_cosPA": "0.99000001",
         "casc_setting_massWindowOmega": "0.0199999996",
         "casc_setting_massWindowXi": "0.00999999978",
-        "casc_setting_nsigmaTPC": "3",
+        "casc_setting_nsigmaTPC": "1",
         "desetting_nClsIts": "6",
         "desetting_nsigmaCutTPC": "2",
         "desetting_nsigmaCutTOF": "2",
@@ -804,8 +808,9 @@
         },
         "processDataV0Casc": "false",
         "processDataNuclei": "false",
-        "processMcV0Casc": "true",
-        "processMcNuclei": "true"
+        "processDataPKPi": "true",
+        "processMcV0Casc": "false",
+        "processMcNuclei": "false"
     },
     "lambdakzero-v0-data-link-builder": {
         "processFound": "true",
