--- a/config/bethe_bloch_parametrisation_Pr_mc.yml
+++ b/config/bethe_bloch_parametrisation_Pr_mc.yml
@@ -25,7 +25,20 @@ p:
   xMaxFit: 2
   yMinFit: 0
   yMaxFit: 12
-  xMaxDoubleFit: 0.8
+  xMaxDoubleFit: -1.
+
+  signalFit:
+    function: '[0] * [3]/2 * exp( [3]/2 * (2*[1] + [3]*[2]^2 - 2*x) ) * TMath::Erfc( ([1] + [3]*[2]^2 - x) / (sqrt(2)*[2]) )' # Exponentialy Modified Gaussian
+    nParams: 4
+    meanParLims: [4., 10.]
+  fmFit:
+    function: 'gaus'
+    nParams: 3
+
+  # Fit from the right side (pre-fit)
+  prefit: True
+  yMinPreFit: [6.2, 5.5, 4.6, 4.2, 3.7, 3.6, 3.2, 3.2, 2.7, 2.6]
+  yMaxPreFit: [12, 12, 12, 12, 12, 10, 10, 10, 10, 10]
 
   BBparams: {
               'kp1': -84.3,
@@ -91,7 +104,7 @@ beta:
           name: "clSizeCosL_vs_beta",
           title: "#LT Cluster size #GT #times #LT cos #lambda #GT vs #it{beta}; #beta; #LT Cluster size #GT #times #LT cos #lambda #GT; Counts",
           xVariable: "fBetaAbs",
-          nXBins: 100,
+          nXBins: 50,
           xMin: 0,
           xMax: 1,
           xLabel: "#beta",
@@ -103,11 +116,29 @@ beta:
           type: "TH2F",
           particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
         }
-  xMinFit: 0.4
+  xMinFit: 0.35
   xMaxFit: 1
   yMinFit: 0
-  yMaxFit: 8
-  xMaxDoubleFit: 0.6
+  yMaxFit: 12
+  xMinDoubleFit: 0.
+  xMaxDoubleFit: -1.
+
+  signalFit:
+    #function: '[0] * TMath::Landau(x, [1], [2])'
+    #function: '[0] * [2] * exp( - 0.5 * ( (x - [1]) / [2] )^2 ) * ( 1 + std::erf( [3] * (x - [1]) / [2] ) )' # Crystal Ball
+    #function: '[0] * [3]/2 * exp( [3]/2 * (2*[1] + [3]*[2]^2 - 2*x) ) * TMath::Erfc( ([1] + [3]*[2]^2 - x) / (sqrt(2)*[2]) )' # Exponentialy Modified Gaussian
+    function: '[0] / (sqrt(2) * [2]) * exp(-0.5 * ((x-[1])/[2])^2)'
+    nParams: 3
+    meanParLims: [4., 10.]
+  fmFit:
+    #function: '[3] / (sqrt(2) * [5]) * exp(-0.5 * ((x-[4])/[5])^2)'
+    function: '[4] / (sqrt(2) * [6]) * exp(-0.5 * ((x-[5])/[6])^2)'
+    nParams: 3
+
+  # Fit from the right side (pre-fit)
+  prefit: False
+  yMinPreFit: [4.7, 4.4, 4.4, 4.5, 4.3, 4.1, 4.1, 4.1, 4, 3.8, 3.8, 3.7, 3.7, 3.5, 3.3, 3.3, 3.3, 3.3, 2.8, 2.8] 
+  yMaxPreFit: [12, 12, 12, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10]
 
   BBparams: {
               'kp1': -14.5,
@@ -125,6 +156,71 @@ beta:
                 xMin: -1,
                 xMax: 1,
                 xLabel: "#beta",
+                yVariable: "fNSigmaPr",
+                nYBins: 100,
+                yMin: -5,
+                yMax: 5,
+                yLabel: "n #sigma_{ITS, #beta}",
+                type: "TH2F",
+                particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
+               }
+
+betagamma:
+  plot: { 
+          name: "clSizeCosL_vs_beta",
+          title: "#LT Cluster size #GT #times #LT cos #lambda #GT vs #beta#gamma; #beta#gamma; #LT Cluster size #GT #times #LT cos #lambda #GT; Counts",
+          xVariable: "fBetaGamma",
+          nXBins: 50,
+          xMin: 0,
+          xMax: 5,
+          xLabel: "#beta#gamma",
+          yVariable: "fClSizeCosL",
+          nYBins: 45,
+          yMin: 0,
+          yMax: 15,
+          yLabel: "#LT Cluster size #GT #times #LT cos #lambda #GT",
+          type: "TH2F",
+          particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
+        }
+  xMinFit: 0.4
+  xMaxFit: 5
+  yMinFit: 0
+  yMaxFit: 12
+  xMinDoubleFit: 0.4
+  xMaxDoubleFit: 1.
+
+  signalFit:
+    #function: '[0] * [2] * exp( - 0.5 * ( (x - [1]) / [2] )^2 ) * ( 1 + TMath::Erf( [3] * (x - [1]) / [2] ) )' # Crystal Ball
+    #function: '[0] * [3]/2 * exp( [3]/2 * (2*[1] + [3]*[2]^2 - 2*x) ) * TMath::Erfc( ([1] + [3]*[2]^2 - x) / (sqrt(2)*[2]) )' # Exponentialy Modified Gaussian
+    function: '[0] / (sqrt(2) * [2]) * exp(-0.5 * ((x-[1])/[2])^2)'
+    nParams: 3
+    meanParLims: [4., 10.]
+  fmFit:
+    function: '[3] / (sqrt(2) * [5]) * exp(-0.5 * ((x-[4])/[5])^2)'
+    #function: '[4] / (sqrt(2) * [6]) * exp(-0.5 * ((x-[5])/[6])^2)'
+    nParams: 3
+
+  # Fit from the right side (pre-fit)
+  prefit: True
+  yMinPreFit: [4.7, 4.4, 4.4, 4.2, 3.8, 3, 2.7] 
+  yMaxPreFit: [12, 12, 12, 10, 10, 10, 10]
+
+  BBparams: {
+              'kp1': -14.5,
+              'kp2': -8.64,
+              'kp3': 0.04,
+              'kp4': 1.58,
+              'kp5': 0.83,
+            }
+  
+  plot_nsigma: {
+                name: "nsigma_vs_beta",
+                title: "n #sigma vs #beta#gamma; #beta#gamma; n #sigma; Counts",
+                xVariable: "fBetaGamma",
+                nXBins: 100,
+                xMin: -1,
+                xMax: 1,
+                xLabel: "#beta#gamma",
                 yVariable: "fNSigmaPr",
                 nYBins: 100,
                 yMin: -5,
