--- a/standalone_scripts/mc_compatibility.yml
+++ b/standalone_scripts/mc_compatibility.yml
@@ -2,9 +2,9 @@
 # Configuration file for the MC compatibility analysis
 #
 
-#species: ["El", "Pi", "Ka", "Pr", "De", "He"]
+species: ["El", "Pi", "Ka", "Pr", "De", "He"]
 
-species: ["Pi", "Pr"]
+#species: ["Pi", "Pr"]
 
 KS:
   x_var: 'fPAbs'
@@ -12,11 +12,11 @@ KS:
   x_max: 2.0
   x_step: 0.1
   
-  ks_var: 'fClSizeCosLam'
+  ks_var: 'fClSizeCosL'
   nBins: 45
   min: 0.
   max: 15.
   name: 'ks_hist'
   title: 'KS hist'
 
-  xLabel: '#LF Cluster size #GT #times #LT cos #lambda #GT'
+  xLabel: '#LT Cluster size #GT #times #LT cos #lambda #GT'
