--- a/config/bethe_bloch_parametrisation_Ka.yml
+++ b/config/bethe_bloch_parametrisation_Ka.yml
@@ -9,7 +9,7 @@ p:
           name: "clSizeCosL_vs_p",
           title: "#LT Cluster size #GT #times #LT cos #lambda #GT vs #it{p}; #it{p} (GeV/#it{c}); #LT Cluster size #GT #times #LT cos #lambda #GT; Counts",
           xVariable: "fPAbs",
-          nXBins: 94,
+          nXBins: 47,
           xMin: 0.3,
           xMax: 5,
           xLabel: "#it{p} (GeV/#it{c})",
@@ -78,9 +78,9 @@ p:
             }   
 
   sigma_params: {
-                  'kp0': 0.1880, #-0.181312,
-                  'kp1': -0.1352, #0.956085,
-                  'kp2': -0.04817, #-0.485012,
+                  'kp0': 0.1988, #-0.181312,
+                  'kp1': -0.1204, #0.956085,
+                  'kp2': -0.04313, #-0.485012,
                   'xVar': 'fPAbs',
                 }
 
@@ -93,10 +93,27 @@ p:
                 xMax: 1.05,
                 xLabel: "#it{p} (GeV/#it{c})",
                 yVariable: "fNSigmaKa",
-                nYBins: 200,
+                nYBins: 50,
                 yMin: -10,
                 yMax: 10,
                 yLabel: "n #sigma_{ITS}",
+                type: "TH2F",
+                particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
+               }
+
+  plot_sigma: {
+                name: "sigma_vs_p",
+                title: "#sigma vs #it{p}; #it{p} (GeV/#it{c}); n #sigma; Counts",
+                xVariable: "fPAbs",
+                nXBins: 70,
+                xMin: 0.35,
+                xMax: 1.05,
+                xLabel: "#it{p} (GeV/#it{c})",
+                yVariable: "fSigmaClSizeCosL",
+                nYBins: 50,
+                yMin: -1,
+                yMax: 1,
+                yLabel: "#sigma_{ITS}",
                 type: "TH2F",
                 particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
                }
