--- a/config/config_outputs.yml
+++ b/config/config_outputs.yml
@@ -6,7 +6,7 @@
 #outputFilePath: "/home/galucia/antiLithium4/analysis/output/data.root"
 #studiesOutputFilePath: "/home/galucia/antiLithium4/analysis/output/data_studies.root"
 outDirs: ["all", #"El", 
-          "Pi", "Ka", "Pr", #"De", "He"
+          "Pi", "Ka", "Pr", "De", "He"
           ]
 
 fItsClusterSizeL0: {  name: "fItsClusterSizeL0",
@@ -177,6 +177,18 @@ fCosL:      {  name: "fCosL",
                       ],
             }
 
+fNClustersIts: {  name: "fNClustersIts",
+                  title: "n hits ITS; Counts",
+                  xVariable: "fNClustersIts",
+                  nXBins: 8,
+                  xMin: -0.5,
+                  xMax: 7.5,
+                  type: "TH1F",
+                  particle: ["all", #"El", 
+                            "Pi", "Ka", "Pr", #"De", "He"
+                            ],
+                  }
+
 #dEdx:     {  name: "dEdx",
 #            title: "Specific energy loss; dE/dx; Counts",
 #            xVariable: "dEdx",
@@ -265,6 +277,22 @@ fCosL:      {  name: "fCosL",
 #          ],
 #            }
 
+nClustersIts_vs_p: {  name: "nClustersIts_vs_p",
+            title: "n hits ITS vs #it{p}; #it{p} (GeV/#it{c}); n hits ITS; Counts",
+            xVariable: "fP",
+            nXBins: 200,
+            xMin: -5,
+            xMax: 5,
+            yVariable: "fNClustersIts",
+            nYBins: 8,
+            yMin: -0.5,
+            yMax: 7.5,
+            type: "TH2F",
+            particle: ["all", #"El", 
+                      "Pi", "Ka", "Pr", #"De", "He"
+                      ],
+            }
+
 meanClSize_vs_p: {  name: "meanClSize_vs_p",
             title: "<Cluster Size> vs #it{p}; #it{p} (GeV/#it{c}); #LT Cluster size #GT; Counts",
             xVariable: "fP",
@@ -304,6 +332,22 @@ clSizeCosL_vs_beta: {  name: "clSizeCosL_vs_beta",
             xMin: -1,
             xMax: 1,
             yVariable: "fClSizeCosL",
+            nYBins: 90,
+            yMin: 0,
+            yMax: 15,
+            type: "TH2F",
+            particle: ["all", #"El", 
+                      "Pi", "Ka", "Pr", #"De", "He"
+                      ],
+            }
+
+rmsClSize_vs_clSizeCosL: {  name: "rmsClSize_vs_clSizeCosL",
+            title: "RMS Cluster size vs #LT Cluster size #GT #times #LT cos #lambda #GT; #LT Cluster size #GT #times #LT cos #lambda #GT; RMS Cluster size ; Counts",
+            xVariable: "fClSizeCosL",
+            nXBins: 90,
+            xMin: 0,
+            xMax: 15,
+            yVariable: "fRMSClSize",
             nYBins: 90,
             yMin: 0,
             yMax: 15,
@@ -377,21 +421,19 @@ partid_vs_pabs: {  name: "partid_vs_pabs",
 #          ],
 #            }
 
-#clSizeCosL_vs_pTPC: {  name: "clSizeCosL_vs_pTPC",
-#            title: "#LT Cluster size #GT #times #LT cos #lambda #GT vs #it{p}_{TPC}; #it{p}_{TPC} (GeV/#it{c}); #LT Cluster size #GT #times #LT cos #lambda #GT; Counts",
-#            xVariable: "pTPC",
-#            nXBins: 1000,
-#            xMin: 0,
-#            xMax: 1,
-#            yVariable: "clSizeCosL",
-#            nYBins: 250,
-#            yMin: 0,
-#            yMax: 25,
-#            type: "TH2F",
-#            particle: ["all", #"El", 
-#          "Pi", "Ka", "Pr", #"De", "He"
-#          ],
-#            }
+clSizeCosL_vs_nsigma: {  name: "clSizeCosL_vs_nsigma",
+            title: "; n#sigma_{TPC}; #LT Cluster size #GT #times #LT cos #lambda #GT; Counts",
+            xVariable: "fTpcNSigma",
+            nXBins: 400,
+            xMin: -2,
+            xMax: 2,
+            yVariable: "fClSizeCosL",
+            nYBins: 150,
+            yMin: 0,
+            yMax: 15,
+            type: "TH2F",
+            particle: ["He"],
+            }
 #
 #beta_vs_pTPC: {  name: "beta_vs_pTPC",
 #            title: "#beta vs #it{p}_{TPC}; #it{p}_{TPC} (GeV/#it{c}); #beta; Counts",
