--- a/plot_config/cfg_efficiency_purity.yml
+++ b/plot_config/cfg_efficiency_purity.yml
@@ -100,4 +100,89 @@ plots:
         },
       outPDF:  efficiency_purity_Pr.pdf
     },
+
+    # 1 - All particles
+    {
+      axisSpecs: 
+        [
+          # x axis
+          {
+            nbins: 100,
+            xmin: 0.28,
+            xmax: 1.08,
+            name: 'efficiency_purity',
+            title: '; #it{p} (GeV/#it{c}); ',
+          },
+          # y axis
+          {
+            nbins: 0,
+            xmin: 0,
+            xmax: 1.02,
+            name: 'efficiency_purity',
+            title: '; #it{p} (GeV/#it{c}); ',
+          },
+        ],
+      canvas:
+        {
+          dummy: True, # dummy flag
+        },
+      multigraph:
+        {
+          name: 'clsize_vs_betagamma',
+          title: '; #it{p} (GeV/#it{c}); ',
+          kwargs: { 
+                    draw_option: 'p',
+                  }
+        },
+      graphs:
+        [
+          {
+            inPath: /home/galucia/ITS_pid/output/LHC22o_pass7_minBias_small/nsigma_output.root,
+            graphName: 'vs_p/efficiency_Pr',
+            graphLabel: 'efficiency',
+            kwargs: {
+                      line_color: 629,  # kRed-3
+                      line_width: 1,
+                      line_style: 1,
+                      marker_color: 629,  # kRed-3
+                      marker_style: 20,
+                      marker_size: 1,
+                      draw_option: 'p same',
+                    }
+          },
+          {
+            inPath: /home/galucia/ITS_pid/output/LHC22o_pass7_minBias_small/nsigma_output.root,
+            graphName: 'vs_p/purity_Pr',
+            graphLabel: 'purity',
+            kwargs: {
+                      line_color: 434,  # kCyan+2
+                      line_width: 1,
+                      line_style: 1,
+                      marker_color: 434,  # kCyan+2
+                      marker_style: 22,
+                      marker_size: 1,
+                      draw_option: 'p same',
+                    }
+          },
+        ],
+      legend:
+        {
+          bool: 1,
+          xmin: 0.6,
+          xmax: 0.89,
+          ymin: 0.14,
+          ymax: 0.3,
+          kwargs: {
+                    border_size: 0,
+                    nColumns: 1,
+                    textSize: 400,
+                    header: '',
+                    fill_color: 0,
+                    fill_style: 0,
+                    fill_alpha: 0,
+                    draw_option: 'same',
+                  }
+        },
+      outPDF:  efficiency_purity_Pr_p.pdf
+    },
   ]
