--- a/config/config_outputs.yml
+++ b/config/config_outputs.yml
@@ -5,7 +5,7 @@
 # output file path
 #outputFilePath: "/home/galucia/antiLithium4/analysis/output/data.root"
 #studiesOutputFilePath: "/home/galucia/antiLithium4/analysis/output/data_studies.root"
-outDirs: ["all", #"El", 
+outDirs: ["all", "Unidentified", #"El", 
           "Pi", "Ka", "Pr", "De", "He"
           ]
 
@@ -17,7 +17,7 @@ fItsClusterSizeL0: {  name: "fItsClusterSizeL0",
             xMax: 15,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -29,7 +29,7 @@ fItsClusterSizeL1: {  name: "fItsClusterSizeL1",
             xMax: 15,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -41,7 +41,7 @@ fItsClusterSizeL2: {  name: "fItsClusterSizeL2",
             xMax: 15,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -53,7 +53,7 @@ fItsClusterSizeL3: {  name: "fItsClusterSizeL3",
             xMax: 15,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -65,7 +65,7 @@ fItsClusterSizeL4: {  name: "fItsClusterSizeL4",
             xMax: 15,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -77,7 +77,7 @@ fItsClusterSizeL5: {  name: "fItsClusterSizeL5",
             xMax: 15,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -89,7 +89,7 @@ fItsClusterSizeL6: {  name: "fItsClusterSizeL6",
             xMax: 15,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -101,7 +101,7 @@ fMeanItsClSize: {  name: "fMeanItsClSize",
             xMax: 15,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -113,7 +113,7 @@ fClSizeCosL: {  name: "fClSizeCosL",
             xMax: 15,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -125,7 +125,7 @@ fP:        {  name: "fP",
             xMax: 5,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -137,7 +137,7 @@ fPt:       {  name: "fPt",
             xMax: 5,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             } 
 
@@ -149,7 +149,7 @@ fPhi:      {  name: "fPhi",
             xMax: 6.283185307179586,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -161,7 +161,7 @@ fEta:      {  name: "fEta",
             xMax: 0.8,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -173,7 +173,7 @@ fCosL:      {  name: "fCosL",
             xMax: 1,
             type: "TH1F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -185,7 +185,7 @@ fNClustersIts: {  name: "fNClustersIts",
                   xMax: 7.5,
                   type: "TH1F",
                   particle: ["all", #"El", 
-                            "Pi", "Ka", "Pr", #"De", "He"
+                            "Pi", "Ka", "Pr", "De", "He"
                             ],
                   }
 
@@ -197,7 +197,7 @@ fNClustersIts: {  name: "fNClustersIts",
 #            xMax: 600,
 #            type: "TH1F",
 #            particle: ["all", #"El", 
-#          "Pi", "Ka", "Pr", #"De", "He"
+#          "Pi", "Ka", "Pr", "De", "He"
 #          ],
 #            }
 #
@@ -209,7 +209,7 @@ fNClustersIts: {  name: "fNClustersIts",
 #            xMax: 10,
 #            type: "TH1F",
 #            particle: ["all", #"El", 
-#          "Pi", "Ka", "Pr", #"De", "He"
+#          "Pi", "Ka", "Pr", "De", "He"
 #          ],
 #            }
 #
@@ -221,7 +221,7 @@ fNClustersIts: {  name: "fNClustersIts",
 #            xMax: 10,
 #            type: "TH1F",
 #            particle: ["all", #"El", 
-#          "Pi", "Ka", "Pr", #"De", "He"
+#          "Pi", "Ka", "Pr", "De", "He"
 #          ],
 #            }
 #
@@ -233,7 +233,7 @@ fNClustersIts: {  name: "fNClustersIts",
 #            xMax: 10,
 #            type: "TH1F",
 #            particle: ["all", #"El", 
-#          "Pi", "Ka", "Pr", #"De", "He"
+#          "Pi", "Ka", "Pr", "De", "He"
 #          ],
 #            }
 #
@@ -245,7 +245,7 @@ fNClustersIts: {  name: "fNClustersIts",
 #            xMax: 10,
 #            type: "TH1F",
 #            particle: ["all", #"El", 
-#          "Pi", "Ka", "Pr", #"De", "He"
+#          "Pi", "Ka", "Pr", "De", "He"
 #          ],
 #            }
 #
@@ -257,7 +257,7 @@ fNClustersIts: {  name: "fNClustersIts",
 #            xMax: 10,
 #            type: "TH1F",
 #            particle: ["all", #"El", 
-#          "Pi", "Ka", "Pr", #"De", "He"
+#          "Pi", "Ka", "Pr", "De", "He"
 #          ],
 #            }
 #
@@ -273,7 +273,7 @@ fNClustersIts: {  name: "fNClustersIts",
 #            yMax: 600,
 #            type: "TH2F",
 #            particle: ["all", #"El", 
-#          "Pi", "Ka", "Pr", #"De", "He"
+#          "Pi", "Ka", "Pr", "De", "He"
 #          ],
 #            }
 
@@ -289,7 +289,7 @@ nClustersIts_vs_p: {  name: "nClustersIts_vs_p",
             yMax: 7.5,
             type: "TH2F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -305,7 +305,7 @@ meanClSize_vs_p: {  name: "meanClSize_vs_p",
             yMax: 15,
             type: "TH2F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -321,7 +321,7 @@ clSizeCosL_vs_p: {  name: "clSizeCosL_vs_p",
             yMax: 15,
             type: "TH2F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -337,7 +337,7 @@ clSizeCosL_vs_beta: {  name: "clSizeCosL_vs_beta",
             yMax: 15,
             type: "TH2F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -353,7 +353,7 @@ rmsClSize_vs_clSizeCosL: {  name: "rmsClSize_vs_clSizeCosL",
             yMax: 15,
             type: "TH2F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -369,7 +369,7 @@ beta_vs_p: {  name: "beta_vs_p",
             yMax: 1,
             type: "TH2F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -385,7 +385,7 @@ partid_vs_p: {  name: "partid_vs_p",
             yMax: 10,
             type: "TH2F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -401,7 +401,7 @@ partid_vs_pabs: {  name: "partid_vs_pabs",
             yMax: 10,
             type: "TH2F",
             particle: ["all", #"El", 
-                      "Pi", "Ka", "Pr", #"De", "He"
+                      "Pi", "Ka", "Pr", "De", "He"
                       ],
             }
 
@@ -417,7 +417,7 @@ partid_vs_pabs: {  name: "partid_vs_pabs",
 #            yMax: 600,
 #            type: "TH2F",
 #            particle: ["all", #"El", 
-#          "Pi", "Ka", "Pr", #"De", "He"
+#          "Pi", "Ka", "Pr", "De", "He"
 #          ],
 #            }
 
@@ -447,7 +447,7 @@ clSizeCosL_vs_nsigma: {  name: "clSizeCosL_vs_nsigma",
 #            yMax: 1,
 #            type: "TH2F",
 #            particle: ["all", #"El", 
-#          "Pi", "Ka", "Pr", #"De", "He"
+#          "Pi", "Ka", "Pr", "De", "He"
 #          ],
 #            }
 #
@@ -463,6 +463,6 @@ clSizeCosL_vs_nsigma: {  name: "clSizeCosL_vs_nsigma",
 #            yMax: 1,
 #            type: "TH2F",
 #            particle: ["all", #"El", 
-#          "Pi", "Ka", "Pr", #"De", "He"
+#          "Pi", "Ka", "Pr", "De", "He"
 #          ],
 #            }
